# hivemine

./: .gitignore  Cargo.toml  README.md  build.sh  hivemine.ae2-200.json  hivemine.example.json  hivemine.launch.json  hivemine_agent.py  land_claim.py  orchestrator.py  revenue_router.py  test_one_agent.py
coins/: README.md  kaspa_agent.py  scrypt_agent.py  xmr_agent.py
src/: agent.rs  main.rs  pool_client.rs
